# human-json

./: .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml  tox.ini
human_json/: __init__.py  transformer.py
pretty_json/: __init__.py  pretty_json.py
tests/: test_pretty_json.py
