[tool.poetry]
name = "pretty-json"
version = "0.1.0"
description = "JSON Pretty-fier"
authors = ["Kuba Clark <jakub.clark@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
isort = "^4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
