[tool.poetry]
name = "human-json"
version = "0.1.1"
description = "Transform JSON Objects to human readable strings"
authors = ["Kuba Clark <jakub.clark@protonmail.com>"]

license = "MIT"

readme = "README.md"

repository = "https://github.com/jakubclark/human-json"
homepage = "https://github.com/jakubclark/human-json"

keywords = ["json", "pretty", "human"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
isort = "^4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
